--- a/apropos.html
+++ b/apropos.html
@@ -9,16 +9,20 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             background-color: #f6a008;
             overflow-x: hidden;
         }
 
-        h1, h4 {
+        h4 {
             font-family: 'Poppins', sans-serif;
+            font-weight: bold;
             color: #142b40;
             text-transform: uppercase;
             letter-spacing: 1px;
+            opacity: 0;
+            transform: translateY(10px);
+            animation: fadeInUp 0.8s ease-out forwards;
         }
 
         /* HEADER */
@@ -27,20 +31,18 @@
             justify-content: center;
             align-items: center;
             background-color: #142b40;
-            padding: 20px;
+            padding: 10px 0;
             position: relative;
-            margin-bottom: 30px;
-            border-radius: 10px;
         }
 
         header h1 {
             color: white;
-            font-size: 20px;
+            font-size: 15px;
             margin: 0;
         }
 
         .logo img {
-            max-width: 60px;
+            max-width: 50px;
             height: auto;
             position: absolute;
             top: 10px;
@@ -52,17 +54,15 @@
             display: flex;
             justify-content: center;
             gap: 20px;
-            padding: 15px 0;
+            padding: 10px 0;
             background-color: #f4f4f4;
-            border-radius: 10px;
-            margin-bottom: 30px;
         }
 
         nav a {
             text-decoration: none;
             color: #142b40;
             font-size: 18px;
-            padding: 12px 20px;
+            padding: 10px 15px;
             background-color: white;
             border-radius: 5px;
             transition: background 0.3s;
@@ -77,7 +77,6 @@
             display: flex;
             justify-content: center;
             width: 100%;
-            margin-bottom: 30px;
         }
 
         .image-container img {
@@ -89,15 +88,15 @@
         /* SECTION CONTACTS */
         .contacts {
             background-color: #f4f4f4;
-            padding: 40px;
+            padding: 40px 20px;
             text-align: center;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 30px auto;
-            max-width: 600px;
+            margin: 20px 0;
         }
 
         .contacts h1 {
+            color: #142b40;
             font-size: 2rem;
             margin-bottom: 20px;
         }
@@ -134,9 +133,9 @@
             background-color: #142b40;
             color: white;
             padding: 15px;
-            position: relative;
-            margin-top: 40px;
-            border-radius: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
@@ -159,7 +158,7 @@
         <img src="beh.jpg" alt="Image d'illustration">
     </div>
 
-    <!-- SECTION CONTACTS -->
+  <!-- SECTION CONTACTS -->
     <section class="contacts">
         <h1>Contactez-nous</h1>
         <p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter :</p>
@@ -175,3 +174,7 @@
 
 </body>
 </html>
+
+
+
+
