--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     
 <body>
     <header>
-        <h1>Carrefour Jeunesse Afrique - Renouer Nos Racines</h1>
+        <h1>Carrefour Jeunesse Afrique - Renouer avec Nos Racines</h1>
     </header>
     <nav>
         <a href="index.html">Accueil</a>
