--- a/voyage.html
+++ b/voyage.html
@@ -326,7 +326,7 @@
                     	Le paiement se fait sur le compte suivant : <h2>513100001386 </h2>  <br> Code Banque  <h2> BJ 067 </h2>  Code Guichet  <h2>  01513 </h2>  Clé Rib: 33 
                     <p>
                            <h2>  Titulaire  </h2>  CARREFOUR JEUNESSE AFRIQUE  <h2> Objet  </h2>  Rénouer avec nos racines </p>
-                         <p> Après paiement, veillez bien envoyé la facture sur le mail : <h3>cjadirection@outlook.fr </h3> <br> Vous recevrez après 48h, un message de confirmation
+                         <p> Après paiement, veuillez bien envoyer la facture sur le mail : <h3>cjadirection@outlook.fr </h3> <br> Vous recevrez après 48h, un message de confirmation
                              de votre inscription.  </p> 
             </li>
            
